--- a/templates/add_feedback.html
+++ b/templates/add_feedback.html
@@ -3,7 +3,7 @@
 {% block title %}Register{% endblock %}
 
 {% block content %}
-    <h1>Register</h1>
+    <h1>Login</h1>
 
     <form method="POST">
         {{ form.hidden_tag() }}
@@ -17,7 +17,6 @@
             </div>
         {% endfor %}
 
-        <button type="submit">Sign Up</button>
+        <button type="submit">Add</button>
     </form>
-    <a href="/login">Login</a>
 {% endblock %}
