--- a/templates/edit_feedback.html
+++ b/templates/edit_feedback.html
@@ -3,9 +3,9 @@
 {% block title %}Register{% endblock %}
 
 {% block content %}
-    <h1>Register</h1>
+    <h1>Login</h1>
 
-    <form method="POST">
+    <form method="POST", action="/feedback/{{ feedback.id }}/update">
         {{ form.hidden_tag() }}
 
         {% for field in form if field.widget.input_type != "hidden" %}
@@ -17,7 +17,6 @@
             </div>
         {% endfor %}
 
-        <button type="submit">Sign Up</button>
+        <button type="submit">Edit</button>
     </form>
-    <a href="/login">Login</a>
 {% endblock %}
